hyperstack-macros/tests/ui/validation_errors/invalid_proto_literal.rs
use hyperstack_macros::hyperstack;

#[hyperstack(proto = true)]
mod broken {}

fn main() {}
